# CCGol

./: .gitignore  CMakeLists.txt  README.md
game_of_life/: 1024alive.pgm  1024dead.pgm  64_alive.pgm  test_alive.pgm  testout.pgm  testout1024alive.pgm  testout128.pgm  testout256.pgm  testout256gen.pgm  testout3.pgm  testout512.pgm  testout512_0.pgm  testout64.pgm  testoutlel.pgm
game_of_life/.build/: pca.d  pca.xml
game_of_life/.build/_l_i2c/src/: i2c_master.xc.d  i2c_master.xc.pca.xml  i2c_master.xc.pca.xml.decouple  i2c_master_async.xc.d  i2c_master_async.xc.pca.xml  i2c_master_async.xc.pca.xml.decouple  i2c_master_ext.xc.d  i2c_master_ext.xc.pca.xml  i2c_master_ext.xc.pca.xml.decouple  i2c_master_single_port.xc.d  i2c_master_single_port.xc.pca.xml  i2c_master_single_port.xc.pca.xml.decouple  i2c_slave.xc.d  i2c_slave.xc.pca.xml  i2c_slave.xc.pca.xml.decouple
game_of_life/.build/_l_logging/src/: debug_printf.c.d  debug_printf.c.pca.xml  debug_printf.c.pca.xml.decouple
game_of_life/.build/_l_xassert/src/: xassert.xc.d  xassert.xc.pca.xml  xassert.xc.pca.xml.decouple
game_of_life/.build/src/: main.xc.d  main.xc.pca.xml  main.xc.pca.xml.decouple
game_of_life/src/: main.xc
game_of_life/timer_outputs/: 128x128-2.txt  128x128-4.txt  16x16-2.txt  16x16-4.txt  256x256-2.txt  256x256-4.txt  512x512-2.txt  512x512-4.txt  64x64-2.txt  64x64-4.txt
